# spamless

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml  requirements.txt  spamless.spec
src/spamless/: __main__.py  cli.py  db.py
src/spamless/api/: openrouter.py
src/spamless/planner/: ai.py  diff.py  io.py  prompts.py  session.py
src/spamless/prompts/: __init__.py  questions.py
src/spamless/ui/: __init__.py  banner.py  plans_page.py  theme.py
